--- a/iotapp/pubspec.yaml
+++ b/iotapp/pubspec.yaml
@@ -30,11 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  mqtt_client: ^10.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   url_launcher: ^6.3.1
+  flutter_bloc: ^8.1.6
+  fluttertoast: ^8.2.8
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
@@ -56,6 +59,9 @@ flutter:
     - family: cf-lcd-521
       fonts:
         - asset: assets/fonts/CFLCD-Regular.ttf
+    - family: PipBoyFont
+      fonts:
+        - asset: assets/fonts/monofonto rg.otf
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
